--- a/src/index.css
+++ b/src/index.css
@@ -5,23 +5,8 @@ body {
   font-family: "Poppins", ;
   /* background-color: #151515; */
 }
-.active {
-  color: #FE9226;
-}
-.hh {
-  color: rgb(71, 71, 71);
-}
-.header  {
-  background-image: url("../public/Images/home-bg.jpg");
+.b {
+  background-image: url('/Images/Free  Textured, Red, H5 Background Images, Red Textured Background Texture H5 Photo Background PNG and Vectors 1.png');
   background-position: center;
-  background-size: cover;
-}
-.f input {
-  outline: none;
-}
-.t input {
-  outline: none;
-}
-.tx textarea{
-  outline: none;
+  background-size: 190vw 120vh;
 }
